--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "rollup-plugin-svelte": "^5.1.1",
     "svelte": "^3.19.1"
   },
+  "peerDependencies": {
+    "svelte": "^3.19.1"
+  },
   "keywords": [
     "svelte",
     "database",
